Fix: removing margin from hr and padding from sidebar
This commit fixes a display issue when screens are too small - it decreases the amount of padding/margin we use in the sidebar, although windows with height < 720px will still suffer from this issue.

--- a/src/styles/isomer-cms/pages/Admin.module.scss
+++ b/src/styles/isomer-cms/pages/Admin.module.scss
@@ -29,7 +29,6 @@
 
   .sidebarNavigation{
     width: 100%;
-    margin-top: 20px;
 
     ul{
       width: 100%;
